Add Customer model + upload insert API

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-DATABASE_URL="postgresql://salongenie_db_abeo_user:3GR4DihoszZS4G4Sfx6Y0roMj3wQthsd@dpg-d4jeev8dl3ps73ee273g-a.singapore-postgres.render.com/salongenie_db_abeo"
-PORT=10000
+NODE_ENV=development
+PORT=5000
+
+DATABASE_URL=postgres://salon_genie_db_new_user:xgbkm4mwU7LOUxSJ7bmRmWx5Eox8vS6O@dpg-d4jfjfm3jp1c73b68pag-a.oregon-postgres.render.com/salon_genie_db_new
